chore: remove husky hooks and clean up package.json dependencies

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "type-check": "tsc -b",
-    "prepare": "husky"
+    "type-check": "tsc -b"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.91.4",
@@ -33,7 +32,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.13.0",
-    "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.4.2",
     "typescript": "^5.7.2",
