--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,7 @@
     "lint:fix": "eslint . --fix",
     "type-check": "tsc -b --noEmit",
     "sonar:eslint": "eslint . --format json --output-file eslint-report.json",
-    "sonar:scan": "npm run sonar:eslint && sonar-scanner",
-    "prepare": "husky"
+    "sonar:scan": "npm run sonar:eslint && sonar-scanner"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -57,7 +56,6 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^3.0.4",
     "globals": "^15.15.0",
-    "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.4.2",
     "tailwindcss": "^4.0.0",
