refactor: update shared config exports and improve query client options
- Updated exports in shared config to include apiFetch and router.
- Modified query client settings: changed refetchOnWindowFocus to false and adjusted mutation retry logic.
- Removed unused mutations file and cleaned up shared index exports.
- Added dropdown menu component to shadcn UI library.
- Updated global CSS variables for theming and improved dark mode styles.
- Changed routes directory in router config and adjusted path mappings in tsconfig.
- Added environment variables example for API configuration.
- Implemented new router structure with root layout and authentication pages.
- Created new pages for public information (about, imprint, privacy) and app features (dashboard, events, members).
- Introduced utility functions for query keys and optimistic updates in shared lib.
- Added theme provider for managing light/dark mode.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,61 +8,35 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
+    "lint": "eslint .",
     "format": "prettier --write .",
-    "lint": "eslint . --fix",
-    "lint:check": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "type-check": "tsc -b --noEmit",
-    "sonar:eslint": "eslint . --format json --output-file eslint-report.json",
-    "sonar:scan": "npm run sonar:eslint && sonar-scanner"
+    "type-check": "tsc -b",
+    "test": "echo 'Tests werden später implementiert'",
+    "test:watch": "echo 'Tests werden später implementiert'"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.1.1",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-query": "^5.81.4",
-    "@tanstack/react-query-devtools": "^5.81.4",
     "@tanstack/react-router": "^1.91.4",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.525.0",
-    "node": "^22.17.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.58.1",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.67"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/js": "^9.29.0",
-    "@tailwindcss/vite": "^4.0.0",
-    "@tanstack/eslint-plugin-query": "^5.81.2",
+    "@eslint/js": "^9.15.0",
     "@tanstack/router-devtools": "^1.91.4",
     "@tanstack/router-plugin": "^1.91.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
-    "@typescript-eslint/eslint-plugin": "^8.35.0",
-    "@typescript-eslint/parser": "^8.35.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.29.0",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-sonarjs": "^3.0.4",
-    "globals": "^15.15.0",
-    "lint-staged": "^16.1.2",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.13.0",
     "prettier": "^3.4.2",
-    "tailwindcss": "^4.0.0",
-    "tw-animate-css": "^1.3.4",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.35.0",
-    "validate-branch-name": "^1.3.2",
+    "typescript-eslint": "^8.17.0",
     "vite": "^6.0.1"
   }
 }
