--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,8 +4,9 @@ sonar.projectName=Faninitiative Spandau e.V. Website
 sonar.projectVersion=1.0.0
 
 # Source Code
-sonar.sources=src
-sonar.exclusions=**/node_modules/**,**/dist/**,**/*.test.*,**/*.spec.*
+sonar.sources=frontend/src
+sonar.exclusions=**/node_modules/**,**/dist/**,**/*.test.*,**/*.spec.*,**/routeTree.gen.ts
+sonar.eslint.reportPaths=frontend/eslint-report.json
 
 # ESLint Integration
 sonar.eslint.reportPaths=eslint-report.json
