feat: Initial project setup for Faninitiative Spandau e.V.
- Added initial database schema in 01-schema.sql for users, events, and todos.
- Created docker-compose files for production and development environments.
- Implemented Dockerfile for frontend with multi-stage builds.
- Configured nginx for frontend serving and API proxying.
- Developed PowerShell scripts for build, clean, and database management.
- Added environment configuration files for development and production.
- Implemented health check and logging for services.
- Created scripts for starting, stopping, and checking the status of services.
- Added installation scripts for required tools and dependencies.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "packageManager": "pnpm@9.15.1",
+  "packageManager": "pnpm@10.12.4",
   "scripts": {
     "dev": "vite",
+    "dev:host": "vite --host 0.0.0.0",
+    "dev:debug": "vite --debug",
     "build": "tsc -b && vite build",
+    "build:analyze": "npm run build && npx vite-bundle-analyzer dist",
     "preview": "vite preview",
+    "preview:host": "vite preview --host 0.0.0.0",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "type-check": "tsc -b",
+    "type-check:watch": "tsc -b --watch",
     "test": "echo 'Tests werden später implementiert'",
-    "test:watch": "echo 'Tests werden später implementiert'"
+    "test:watch": "echo 'Tests werden später implementiert'",
+    "test:coverage": "echo 'Test Coverage wird später implementiert'",
+    "clean": "rm -rf dist .cache",
+    "clean:deps": "rm -rf node_modules",
+    "clean:all": "npm run clean && npm run clean:deps",
+    "routes:generate": "pnpm exec tsx ../node_modules/@tanstack/router-plugin/dist/cli.js generate",
+    "deps:update": "pnpm update --interactive",
+    "deps:outdated": "pnpm outdated"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
