--- a/package.json
+++ b/package.json
@@ -1,41 +1,50 @@
 {
-  "name": "faninitiative-spandau-frontend",
+  "name": "faninitiative-spandau",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
-  "packageManager": "pnpm@9.15.1",
+  "packageManager": "pnpm@10.12.4",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview",
-    "lint": "eslint .",
-    "format": "prettier --write .",
-    "type-check": "tsc -b"
-  },
-  "dependencies": {
-    "@tanstack/react-router": "^1.91.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "setup": "powershell -ExecutionPolicy Bypass -File scripts/setup.ps1",
+    "dev": "powershell -ExecutionPolicy Bypass -File scripts/dev-all-docker.ps1",
+    "dev:all": "powershell -ExecutionPolicy Bypass -File scripts/dev-all-docker.ps1",
+    "dev:backend": "powershell -ExecutionPolicy Bypass -File scripts/dev-backend-docker.ps1",
+    "dev:frontend": "powershell -ExecutionPolicy Bypass -File scripts/dev-frontend-docker.ps1",
+    "dev:local": "concurrently \"npm run docker:backend\" \"npm run frontend:dev\"",
+    "frontend:dev": "pnpm --filter frontend dev",
+    "frontend:build": "pnpm --filter frontend build",
+    "frontend:preview": "pnpm --filter frontend preview",
+    "frontend:lint": "pnpm --filter frontend lint",
+    "frontend:format": "pnpm --filter frontend format",
+    "frontend:type-check": "pnpm --filter frontend type-check",
+    "backend:dev": "echo 'Backend wird in Phase 3 implementiert'",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:backend": "docker-compose up -d mysql phpmyadmin backend",
+    "docker:logs": "docker-compose logs -f",
+    "docker:logs:frontend": "docker-compose logs -f frontend",
+    "docker:logs:backend": "docker-compose logs -f backend",
+    "docker:restart": "docker-compose restart",
+    "build": "powershell -ExecutionPolicy Bypass -File scripts/build.ps1",
+    "build:frontend": "pnpm --filter frontend build",
+    "test": "powershell -ExecutionPolicy Bypass -File scripts/test.ps1",
+    "test:frontend": "pnpm --filter frontend test",
+    "clean": "powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -Build",
+    "clean:all": "powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -All",
+    "clean:deps": "powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -Deps",
+    "clean:docker": "powershell -ExecutionPolicy Bypass -File scripts/clean.ps1 -Docker",
+    "db:reset": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 reset",
+    "db:backup": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 backup",
+    "db:shell": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 shell",
+    "db:status": "powershell -ExecutionPolicy Bypass -File scripts/db.ps1 status",
+    "status": "powershell -ExecutionPolicy Bypass -File scripts/status.ps1",
+    "stop": "powershell -ExecutionPolicy Bypass -File scripts/stop-all.ps1",
+    "lint": "pnpm -r lint",
+    "format": "pnpm -r format",
+    "type-check": "pnpm -r type-check",
+    "check:requirements": "powershell -ExecutionPolicy Bypass -File scripts/check-requirements.ps1",
+    "install:tools": "powershell -ExecutionPolicy Bypass -File scripts/install-tools.ps1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/js": "^9.15.0",
-    "@tanstack/router-devtools": "^1.91.4",
-    "@tanstack/router-plugin": "^1.91.2",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^8.17.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.13.0",
-    "lint-staged": "^16.1.2",
-    "prettier": "^3.4.2",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.17.0",
-    "vite": "^6.0.1"
+    "concurrently": "^9.1.0"
   }
 }
