refactor: remove unused design tokens, layouts, and components
- Deleted design tokens for spacing, typography, and colors.
- Removed AppLayout, BaseLayout, and SplitLayout components along with their configurations.
- Eliminated Breadcrumb, Footer, Header, and Navigation components and their associated files.
- Cleaned up utility functions and error boundary provider.
- Updated package.json to include ESLint configuration and dependencies.
- Adjusted pnpm workspace settings for better dependency management.

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
 20
+public-hoist-pattern[]=*eslint*
+public-hoist-pattern[]=@typescript-eslint/*
+public-hoist-pattern[]=eslint-plugin-*
+shamefully-hoist=false
