--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "faninitiative-spandau",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "packageManager": "pnpm@10.12.4",
   "scripts": {
     "setup": "powershell -ExecutionPolicy Bypass -File scripts/setup.ps1",
@@ -45,6 +46,16 @@
     "install:tools": "powershell -ExecutionPolicy Bypass -File scripts/install-tools.ps1"
   },
   "devDependencies": {
-    "concurrently": "^9.1.0"
+    "@eslint/js": "9.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "concurrently": "^9.1.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-feature-sliced-design": "^1.11.2",
+    "eslint-plugin-react": "^7.37.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^15.0.0",
+    "typescript-eslint": "^8.0.0"
   }
 }
