--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,13 @@
 packages:
-  - "frontend"
-  - "backend"
-  - "apps/*"
-  - "packages/*"
+  - frontend
+  - backend
+  - apps/*
+  - packages/*
+
+ignoredBuiltDependencies:
+  - '@tailwindcss/oxide'
+  - esbuild
+
+onlyBuiltDependencies:
+  - '@tailwindcss/oxide'
+  - esbuild
