--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
     "build:analyze": "npm run build && npx vite-bundle-analyzer dist",
     "preview": "vite preview",
     "preview:host": "vite preview --host 0.0.0.0",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint src --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "lint:cache": "eslint src --cache --cache-location .eslintcache",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc -b",
@@ -37,6 +38,7 @@
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
     "@tanstack/react-router": "^1.91.4",
+    "eslint": "^9.30.0",
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -46,19 +48,19 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/js": "^9.15.0",
+    "@eslint/js": "^9.30.0",
     "@tanstack/router-devtools": "^1.91.4",
     "@tanstack/router-plugin": "^1.91.2",
     "@types/node": "^24.0.6",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^8.17.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.15.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.13.0",
     "lightningcss": "^1.30.1",
     "postcss": "^8.5.6",
