--- a/package.json
+++ b/package.json
@@ -40,22 +40,16 @@
     "status": "powershell -ExecutionPolicy Bypass -File scripts/status.ps1",
     "stop": "powershell -ExecutionPolicy Bypass -File scripts/stop-all.ps1",
     "lint": "pnpm -r lint",
-    "format": "pnpm -r format",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "type-check": "pnpm -r type-check",
     "check:requirements": "powershell -ExecutionPolicy Bypass -File scripts/check-requirements.ps1",
     "install:tools": "powershell -ExecutionPolicy Bypass -File scripts/install-tools.ps1"
   },
   "devDependencies": {
-    "@eslint/js": "9.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
     "concurrently": "^9.1.0",
-    "eslint": "^9.0.0",
-    "eslint-plugin-feature-sliced-design": "^1.11.2",
-    "eslint-plugin-react": "^7.37.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^15.0.0",
+    "globals": "^15.15.0",
+    "prettier": "^3.6.2",
     "typescript-eslint": "^8.0.0"
   }
 }
