--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@tanstack/react-router": "^1.91.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint": "^9.30.0",
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
@@ -53,7 +54,7 @@
     "@eslint/js": "^9.30.0",
     "@tanstack/router-devtools": "^1.91.4",
     "@tanstack/router-plugin": "^1.91.2",
-    "@types/node": "^24.0.6",
+    "@types/node": "^24.0.7",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
