--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,25 +27,53 @@
     "clean:all": "npm run clean && npm run clean:deps",
     "routes:generate": "pnpm exec tsx ../node_modules/@tanstack/router-plugin/dist/cli.js generate",
     "deps:update": "pnpm update --interactive",
-    "deps:outdated": "pnpm outdated"
+    "deps:outdated": "pnpm outdated",
+    "type-coverage": "type-coverage",
+    "type-coverage:detail": "type-coverage --detail",
+    "type-coverage:ci": "type-coverage --at-least 95"
   },
   "dependencies": {
+    "@axe-core/react": "^4.10.2",
+    "@eslint/compat": "^1.3.1",
+    "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
     "@tanstack/react-router": "^1.91.4",
+    "@tanstack/react-table": "^8.21.3",
+    "@tanstack/router-vite-plugin": "^1.122.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dependency-cruiser": "^16.10.3",
     "eslint": "^9.30.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-boundaries": "^5.0.1",
+    "eslint-plugin-feature-sliced-design": "^1.11.2",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
+    "eslint-plugin-sonarjs": "^3.0.4",
+    "lint-staged": "^16.1.2",
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.59.0",
+    "react-router-dom": "^7.6.3",
     "tailwind-merge": "^3.3.1",
+    "type-coverage": "^2.29.7",
+    "vite-bundle-analyzer": "^0.23.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
@@ -73,5 +101,16 @@
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0",
     "vite": "^6.0.1"
+  },
+  "typeCoverage": {
+    "atLeast": 95,
+    "strict": true,
+    "ignoreCatch": true,
+    "ignoreFiles": [
+      "**/*.test.ts",
+      "**/*.spec.ts"
+    ],
+    "cache": true,
+    "detail": true
   }
 }
