--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
   "devDependencies": {
     "concurrently": "^9.1.0",
     "globals": "^15.15.0",
-    "prettier": "^3.6.2",
-    "typescript-eslint": "^8.0.0"
+    "prettier": "^3.6.2"
   }
 }
