--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,6 +71,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
     "react-router-dom": "^7.6.3",
+    "simple-icons": "^15.3.0",
     "tailwind-merge": "^3.3.1",
     "type-coverage": "^2.29.7",
     "vite-bundle-analyzer": "^0.23.0",
@@ -81,7 +82,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.30.0",
     "@tanstack/router-devtools": "^1.91.4",
-    "@tanstack/router-plugin": "^1.91.2",
+    "@tanstack/router-plugin": "^1.122.0",
     "@types/node": "^24.0.7",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
