feat: add settings management features including branding, feature flags, and notifications configuration
- Implemented `UpdateBranding` component for branding settings management.
- Added `ManageFeatureFlags` component to toggle feature flags.
- Created `ConfigureNotifications` component for notification settings.
- Developed `SettingsPanel` to organize settings into tabs for easy navigation.
- Introduced `QuickSettings` dropdown for quick access to feature toggles.
- Established API client and query client for handling API requests and responses.
- Set up mock service worker for development environment.
- Added validation schemas for branding settings.
- Exported all new components and features in respective index files.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,21 @@
+# .env.example
+# Example environment variables
+
 # API Configuration
 VITE_API_BASE_URL=http://localhost:3000/api
+VITE_API_TIMEOUT=30000
+VITE_MOCK_API_ENABLED=true
+
+# External Services
+VITE_GOOGLE_DRIVE_CLIENT_ID=your-google-client-id
+VITE_EASYVEREIN_CLIENT_ID=your-easyverein-client-id
+VITE_EASYVEREIN_REDIRECT_URI=http://localhost:5173/auth/callback
 
 # Feature Flags
-VITE_ENABLE_DEVTOOLS=true
+VITE_ENABLE_DARK_MODE=true
+VITE_ENABLE_PWA=false
+VITE_ENABLE_ANALYTICS=false
+
+# Static Assets
+VITE_CDN_URL=https://cdn.fanini.live
+VITE_DEFAULT_AVATAR_URL=/images/default-avatar.jpg
