--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
@@ -67,6 +68,7 @@
     "eslint-plugin-sonarjs": "^3.0.4",
     "lint-staged": "^16.1.2",
     "lucide-react": "^0.525.0",
+    "msw": "^2.10.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
@@ -113,5 +115,10 @@
     ],
     "cache": true,
     "detail": true
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
