Refactor settings management and API integration
- Removed MSW mock handlers for settings and replaced with new implementation.
- Updated settings API queries and mutations for better structure and type safety.
- Enhanced validation schemas for settings and branding.
- Improved error handling and loading states in UpdateBranding component.
- Introduced mock data management for settings in testing environment.
- Organized API client and query/mutation utilities for cleaner codebase.
- Added comprehensive logging for MSW handlers and requests.

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,7 @@
-VITE_API_BASE_URL=http://localhost:3000/api
 VITE_ENABLE_DEVTOOLS=true
+# frontend/.env.development
+VITE_API_BASE_URL=http://localhost:3000/api
+VITE_MOCK_API_ENABLED=true
+VITE_API_TIMEOUT=30000
 VITE_APP_NAME=Faninitiative Spandau e.V.
 VITE_APP_VERSION=0.1.0
