Refactor components and types for improved consistency and readability
- Updated DataField and DataGrid components to use conditional rendering.
- Changed LoadingStateProps and ErrorBoundaryProps from types to interfaces for better extensibility.
- Refactored ErrorBoundary and LoadingState components to align with new type definitions.
- Adjusted Container and PageHeader components for consistent import ordering and conditional rendering.
- Converted various type definitions in layout and navigation components from types to interfaces.
- Enhanced ThemeToggle component with clearer function syntax.
- Improved Breadcrumb and NavLink components with conditional rendering.
- Updated QuickSettings to handle null settings more explicitly.
- Reorganized imports in Gallery and Layout components for clarity.
- Removed obsolete tsconfig.app.json and updated tsconfig.json for TypeScript 5.7 features.
- Enhanced Vite configuration for better performance and build optimizations.
- Added ls-lint configuration for enforcing naming conventions across the project.

--- a/frontend/.prettierignore
+++ b/frontend/.prettierignore
@@ -1,8 +1,49 @@
-dist
-node_modules
+# Dependencies
+node_modules/
 pnpm-lock.yaml
-routeTree.gen.ts
-coverage
-.next
-.cache
-public
+package-lock.json
+yarn.lock
+
+# Build outputs
+dist/
+build/
+.next/
+out/
+coverage/
+
+# Generated files
+frontend/src/app/routeTree.gen.ts
+*.min.js
+*.min.css
+*.map
+
+# Cache
+.cache/
+.eslintcache
+.stylelintcache
+*.tsbuildinfo
+
+# IDE
+.idea/
+.vscode/local.settings.json
+
+# Environment
+.env.local
+.env.*.local
+
+# Logs
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Git
+.git/
+.gitignore
+
+# Documentation
+CHANGELOG.md
+
+# Backend (separate prettier config)
+backend/
