--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,13 +52,15 @@
     "@tanstack/react-query-devtools": "^5.81.5",
     "@tanstack/react-router": "^1.91.4",
     "@tanstack/react-table": "^8.21.3",
-    "@tanstack/router-vite-plugin": "^1.122.0",
+    "@tanstack/router-vite-plugin": "^1.122.1",
+    "@vitejs/plugin-react-swc": "^3.10.2",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dependency-cruiser": "^16.10.3",
     "eslint": "^9.30.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-boundaries": "^5.0.1",
     "eslint-plugin-feature-sliced-design": "^1.11.2",
@@ -66,6 +68,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-plugin-sonarjs": "^3.0.4",
+    "eslint-plugin-unicorn": "^59.0.1",
     "lint-staged": "^16.1.2",
     "lucide-react": "^0.525.0",
     "msw": "^2.10.2",
@@ -73,6 +76,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
     "react-router-dom": "^7.6.3",
+    "rollup-plugin-visualizer": "^6.0.3",
     "simple-icons": "^15.3.0",
     "tailwind-merge": "^3.3.1",
     "type-coverage": "^2.29.7",
