feat: add public and app routes with layouts and pages
- Implemented root layout with TanStack Router Devtools for development.
- Created public layout with header and footer components.
- Added Datenschutz, Impressum, Kontakt, and Home pages under public routes.
- Developed app layout with sidebar navigation for Dashboard, Events, Members, and Activities.
- Created Events page with event listing and filtering options.
- Implemented Dashboard page with settings overview and quick actions.
- Developed Members page with member listing and quick action buttons.
- Added Profile and Settings pages with basic structure.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -74,7 +74,7 @@
     "src/**/*",
     "vite.config.ts",
     "tailwind.config.ts"
-  ],
+, "src/pages/_public/.tsx"  ],
   "exclude": [
     "node_modules",
     "dist",
