feat: Integrate DemoTable into Kontakt page and remove unused converter file
- Added DemoTable component to the Kontakt page for enhanced user interaction.
- Removed the unused converter.ts file to clean up the codebase.
- Updated various cell components to handle null and undefined values more gracefully.
- Created AdvancedDemoTable component showcasing advanced table features and mock data.
- Refactored data table model types and hooks for improved clarity and functionality.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -75,7 +75,8 @@
     "vite.config.ts",
     "tailwind.config.ts",
     "src/pages/_public/.tsx",
-    "eslint/**/*"
+    "eslint/**/*",
+    "demo/**/*"
   ],
   "exclude": [
     "node_modules",
