--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
     "@tanstack/react-router": "^1.91.4",
+    "@tanstack/react-router-devtools": "^1.123.2",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-vite-plugin": "^1.122.1",
     "@vitejs/plugin-react-swc": "^3.10.2",
