Refactor form components for improved readability and maintainability
- Moved the headline label component outside of the Checkbox component for better separation of concerns.
- Updated the Combobox and DatePicker components to use clearer boolean checks and improved formatting.
- Enhanced the useController hook in DatePicker to handle null and undefined values more explicitly.
- Added organization seeding functions for board members and documents in development data.
- Improved type safety in organization handlers and ensured consistent data handling.
- Refactored the Chart component to enhance D3 integration and improve type definitions.
- Cleaned up various components by replacing conditional rendering with ternary operators for better readability.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -103,6 +103,7 @@
     "@mswjs/data": "^0.16.2",
     "@tanstack/router-devtools": "^1.91.4",
     "@tanstack/router-plugin": "^1.122.0",
+    "@types/d3": "^7.4.3",
     "@types/node": "^24.0.7",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
