feat: add charting components and hooks for enhanced data visualization
- Implemented a Separator component for UI consistency.
- Created a centralized index for chart components, hooks, and utilities.
- Developed useChartData hook for managing chart data with optional real-time updates.
- Added useChartInteraction hook for handling chart interactions with undo/redo functionality.
- Defined various node data types for organizational, workflow, and RACI charts.
- Built OrgNode, RACINode, and WorkflowNode components for rendering different chart types.
- Designed a ChartToolbar for user interactions including zoom, export, and undo/redo actions.
- Established BaseEdge and BaseNode components for consistent edge and node styling.
- Implemented export functionality for charts in PNG, SVG, and PDF formats.
- Created layout utility for automatic positioning of nodes in hierarchical charts.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,11 +61,13 @@
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-vite-plugin": "^1.122.1",
     "@vitejs/plugin-react-swc": "^3.10.2",
+    "@xyflow/react": "^12.8.1",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "d3": "^7.9.0",
+    "dagre": "^0.8.5",
     "date-fns": "^4.1.0",
     "dependency-cruiser": "^16.10.3",
     "eslint": "^9.30.0",
@@ -78,6 +80,8 @@
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-plugin-sonarjs": "^3.0.4",
     "eslint-plugin-unicorn": "^59.0.1",
+    "html-to-image": "^1.11.13",
+    "jspdf": "^3.0.1",
     "lint-staged": "^16.1.2",
     "lucide-react": "^0.525.0",
     "msw": "^2.10.2",
@@ -104,6 +108,7 @@
     "@tanstack/router-devtools": "^1.91.4",
     "@tanstack/router-plugin": "^1.122.0",
     "@types/d3": "^7.4.3",
+    "@types/dagre": "^0.7.53",
     "@types/node": "^24.0.7",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
