--- a/frontend/package.json
+++ b/frontend/package.json
@@ -81,6 +81,7 @@
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-plugin-sonarjs": "^3.0.4",
     "eslint-plugin-unicorn": "^59.0.1",
+    "framer-motion": "^12.23.0",
     "html-to-image": "^1.11.13",
     "jspdf": "^3.0.1",
     "lint-staged": "^16.1.2",
@@ -95,6 +96,7 @@
     "react-router-dom": "^7.6.3",
     "rollup-plugin-visualizer": "^6.0.3",
     "simple-icons": "^15.3.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "type-coverage": "^2.29.7",
     "vite-bundle-analyzer": "^0.23.0",
