feat: add RACI matrix components and workflow chart functionality
- Implemented RACILegend and RACINode components for displaying RACI roles and responsibilities.
- Created WorkflowNode component to represent workflow nodes with status, checklists, and comments.
- Added CompactToolbar and ChartToolbar for enhanced user controls in charts.
- Developed BaseEdge and BaseNode components for consistent styling in edges and nodes.
- Introduced export functionality for charts in PNG, SVG, and PDF formats.
- Implemented automatic layout for hierarchical diagrams using dagre.
- Added mock service worker for API mocking during development.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -82,7 +82,9 @@
     "tailwind.config.ts",
     "src/pages/_public/.tsx",
     "eslint/**/*",
-    "demo/**/*"
+    "demo/**/*",
+    ".storybook/**/*",
+    "../packages/charts/src/charts"
   ],
   "exclude": [
     "node_modules",
