--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,9 +30,14 @@
     "deps:outdated": "pnpm outdated",
     "type-coverage": "type-coverage",
     "type-coverage:detail": "type-coverage --detail",
-    "type-coverage:ci": "type-coverage --at-least 95"
+    "type-coverage:ci": "type-coverage --at-least 95",
+    "sb": "storybook dev -p 6006",
+    "sb:build": "storybook build",
+    "sb:clean": "rimraf node_modules/.cache/storybook",
+    "sb:init": "pnpm sb:clean && pnpm sb"
   },
   "dependencies": {
+    "@fanini/charts": "workspace:*",
     "@axe-core/react": "^4.10.2",
     "@eslint/compat": "^1.3.1",
     "@hookform/resolvers": "^5.1.1",
@@ -75,7 +80,6 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-boundaries": "^5.0.1",
-    "eslint-plugin-feature-sliced-design": "^1.11.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
@@ -103,13 +107,22 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.1",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.30.0",
     "@faker-js/faker": "^9.8.0",
+    "@feature-sliced/eslint-config": "^0.1.1",
     "@mswjs/data": "^0.16.2",
+    "@storybook/addon-a11y": "^9.0.15",
+    "@storybook/builder-vite": "^9.0.15",
+    "@storybook/react": "^9.0.15",
+    "@storybook/react-vite": "^9.0.15",
     "@tanstack/router-devtools": "^1.91.4",
     "@tanstack/router-plugin": "^1.122.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/d3": "^7.4.3",
     "@types/dagre": "^0.7.53",
     "@types/node": "^24.0.7",
@@ -118,22 +131,31 @@
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sort-exports": "^0.9.1",
+    "eslint-plugin-storybook": "9.0.15",
     "globals": "^15.13.0",
     "lightningcss": "^1.30.1",
+    "playwright": "^1.53.2",
     "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.13",
+    "prop-types": "15.8.1",
+    "rimraf": "^6.0.1",
+    "storybook": "^9.0.15",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0",
     "uuid": "^11.1.0",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vitest": "^3.2.4"
   },
   "typeCoverage": {
     "atLeast": 95,
