Refactor animated components: replace AnimatedNumber with AnimatedValue across various sections; remove unused breadcrumb components and hooks; enhance Image component with loading states and error handling; update Vite config for Storybook integration; add nginx configuration for serving static files.

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -28,6 +28,12 @@ routeTree.gen.ts
 
 # Generated files
 src/tailwind.output.css
+# Storybook
+.storybook-static/
+storybook-static/
+public/storybook/
+node_modules/.cache/storybook/
 
-*storybook.log
-storybook-static
+# Build outputs
+dist/
+build/
