--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "packageManager": "pnpm@10.12.4",
   "scripts": {
+    "dev:all": "concurrently \"pnpm dev\" \"pnpm sb\"",
     "dev": "vite",
     "dev:host": "vite --host 0.0.0.0",
     "dev:debug": "vite --debug",
-    "build": "tsc -b && vite build",
     "build:analyze": "npm run build && npx vite-bundle-analyzer dist",
     "preview": "vite preview",
     "preview:host": "vite preview --host 0.0.0.0",
@@ -32,9 +32,11 @@
     "type-coverage:detail": "type-coverage --detail",
     "type-coverage:ci": "type-coverage --at-least 95",
     "sb": "storybook dev -p 6006",
-    "sb:build": "storybook build",
-    "sb:clean": "rimraf node_modules/.cache/storybook",
-    "sb:init": "pnpm sb:clean && pnpm sb"
+    "sb:build": "cross-env STORYBOOK=true storybook build -o .storybook-static",
+    "sb:clean": "rimraf node_modules/.cache/storybook .storybook-static",
+    "sb:init": "pnpm sb:clean && pnpm sb",
+    "build": "tsc -b && vite build",
+    "build:all": "pnpm build && pnpm sb:build && rimraf dist/storybook && move-cli .storybook-static dist/storybook"
   },
   "dependencies": {
     "@axe-core/react": "^4.10.2",
@@ -117,6 +119,7 @@
     "@storybook/builder-vite": "^9.0.15",
     "@storybook/react": "^9.0.15",
     "@storybook/react-vite": "^9.0.15",
+    "@swc/plugin-remove-console": "^8.0.3",
     "@tanstack/router-devtools": "^1.91.4",
     "@tanstack/router-plugin": "^1.122.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -134,6 +137,8 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.0",
+    "cross-env": "^7.0.3",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
