--- a/frontend/package.json
+++ b/frontend/package.json
@@ -91,6 +91,7 @@
     "jspdf": "^3.0.1",
     "lint-staged": "^16.1.2",
     "lucide-react": "^0.525.0",
+    "move-cli": "^2.0.0",
     "msw": "^2.10.2",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
@@ -103,6 +104,7 @@
     "simple-icons": "^15.3.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
+    "terser": "^5.43.1",
     "type-coverage": "^2.29.7",
     "vite-bundle-analyzer": "^0.23.0",
     "zod": "^3.25.67"
@@ -119,6 +121,7 @@
     "@storybook/builder-vite": "^9.0.15",
     "@storybook/react": "^9.0.15",
     "@storybook/react-vite": "^9.0.15",
+    "@storybook/test": "^8.6.14",
     "@swc/plugin-remove-console": "^8.0.3",
     "@tanstack/router-devtools": "^1.91.4",
     "@tanstack/router-plugin": "^1.122.0",
