--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,43 @@
 {
-  "name": "faninitiative-spandau-backend",
+  "name": "@faninitiative/backend",
   "version": "0.1.0",
   "private": true,
-  "description": "Backend für Faninitiative Spandau e.V.",
+  "description": "Backend API für Faninitiative Spandau e.V.",
   "scripts": {
-    "dev": "echo 'Backend wird in Phase 3 implementiert'",
-    "build": "echo 'Backend wird in Phase 3 implementiert'"
+    "dev": "next dev -p 3000",
+    "build": "next build",
+    "start": "next start -p 3000",
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "db:migrate": "tsx src/infrastructure/database/migrate.ts",
+    "db:seed": "tsx src/infrastructure/database/seed.ts"
+  },
+  "dependencies": {
+    "@types/swagger-jsdoc": "^6.0.4",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.6.0",
+    "next": "^14.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "swagger-ui-react": "^5.26.2",
+    "uuid": "^11.1.0",
+    "zod": "^3.22.0"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cors": "^2.8.0",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/node": "^24.0.10",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "swagger-jsdoc": "^6.2.8",
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0"
   }
 }
