feat(api): refactor TypeScript configuration and update target to ES2022
feat(shared): add new types for User and Event, and implement utility functions

feat(api): implement CRUD use cases for events and members

feat(api): set up MySQL database connection and repositories for events and members

feat(api): create API router with dependency injection for controllers

feat(api): implement authentication middleware and basic auth controller methods

chore(config): add ESLint and TypeScript configuration for shared packages

chore(ui): initialize UI package with placeholder for shared components

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,57 +1,48 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2017",
+    "target": "ES2022",
+    "module": "ESNext",
     "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
+      "ES2022"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
+    "jsx": "react-jsx",
     "moduleResolution": "bundler",
+    "allowJs": true,
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
+    "noEmit": true,
+    "baseUrl": "./src",
     "paths": {
       "@/*": [
-        "./src/*"
+        "./*"
       ],
       "@/domain/*": [
-        "./src/domain/*"
+        "domain/*"
       ],
       "@/application/*": [
-        "./src/application/*"
+        "application/*"
       ],
       "@/infrastructure/*": [
-        "./src/infrastructure/*"
+        "infrastructure/*"
       ],
       "@/presentation/*": [
-        "./src/presentation/*"
-      ],
-      "@/config/*": [
-        "./src/config/*"
+        "presentation/*"
       ]
-    },
-    "baseUrl": ".",
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
+    }
   },
   "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    ".next"
   ]
 }
