--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@faninitiative/shared",
+  "name": "@faninitiative/ui",
   "version": "0.1.0",
   "private": true,
   "main": "./src/index.ts",
@@ -11,9 +11,12 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "zod": "^3.22.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
     "typescript": "^5.7.2"
   }
 }
