--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,42 +2,36 @@
   "name": "@faninitiative/api",
   "version": "0.1.0",
   "private": true,
-  "description": "Backend API für Faninitiative Spandau e.V.",
+  "type": "module",
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start -p 3000",
-    "lint": "next lint",
+    "lint": "eslint src --ext .ts,.tsx",
     "type-check": "tsc --noEmit",
+    "clean": "rm -rf .next dist",
     "db:migrate": "tsx src/infrastructure/database/migrate.ts",
     "db:seed": "tsx src/infrastructure/database/seed.ts"
   },
   "dependencies": {
-    "@types/swagger-jsdoc": "^6.0.4",
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
-    "jsonwebtoken": "^9.0.0",
+    "next": "15.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "mysql2": "^3.6.0",
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "swagger-ui-react": "^5.26.2",
-    "uuid": "^11.1.0",
-    "zod": "^3.22.0"
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.22.0",
+    "dotenv": "^16.4.5",
+    "@faninitiative/shared": "workspace:*"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^3.0.0",
-    "@types/cors": "^2.8.0",
-    "@types/jsonwebtoken": "^9.0.0",
-    "@types/node": "^24.0.10",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.35.1",
-    "@typescript-eslint/parser": "^8.35.1",
-    "swagger-jsdoc": "^6.2.8",
+    "@faninitiative/config": "workspace:*",
+    "@types/node": "^24.0.7",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "typescript": "^5.7.2",
     "tsx": "^4.0.0",
-    "typescript": "^5.0.0"
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1"
   }
 }
