--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,24 +14,28 @@
     "db:seed": "tsx src/infrastructure/database/seed.ts"
   },
   "dependencies": {
+    "@faninitiative/shared": "workspace:*",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "mysql2": "^3.6.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.22.0",
-    "dotenv": "^16.4.5",
-    "@faninitiative/shared": "workspace:*"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-react": "^5.26.2",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@faninitiative/config": "workspace:*",
-    "@types/node": "^24.0.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
-    "typescript": "^5.7.2",
-    "tsx": "^4.0.0",
+    "@types/node": "^24.0.7",
     "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1"
+    "@types/react-dom": "^19.0.1",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-react": "^5.18.0",
+    "tsx": "^4.0.0",
+    "typescript": "^5.7.2"
   }
 }
